Add some new APIs, allow for smooth transition